theme/clientshared/dialog.scss
@use "shared/extends/controls";
@use "shared/extends/dialog";
@use "shared/extends/library";
@use "shared/extends/style";

@keyframes dropfade {
	0% {
		opacity: 0;
		transform: translateY(-5px);
	}

	100% {
		opacity: 1;
		transform: translateY(0);
	}
}

.DialogBody {
	a {
		@include style.link;

		font: inherit;
	}
}

.DialogBodyText {
	color: inherit;
	font: inherit;
	margin: 0;
	margin-bottom: 4px;
}

.DialogButton {
	@include controls.button;

	&::before {
		display: none;
	}
}

.DialogCheckbox {
	@include controls.input-base("checkbox", ".Active");

	border-radius: 0;
	box-shadow: none;

	width: var(--size);
	height: var(--size);

	svg {
		display: none;
	}
}

.DialogCheckbox_Container {
	margin: 0;

	.DialogCheckbox {
		margin-inline-end: 4px;
	}
}

.DialogControlsSection,
.DialogControlsSectionHeader,
.DialogHeader,
.DialogSubHeader {
	&:not(:first-child) {
		margin-top: var(--tabpanel_spacing);
	}
}

.DialogDropDown {
	--arrow-grad-start: #f2f2f2;
	--arrow-grad-end: #cfcfcf;
	--arrow-border: #707070;
	--arrow-inner-border: #fcfcfc;

	@extend %textfield-base;

	opacity: 1;
	gap: 0;
	padding: 0;

	display: flex;

	&:not(.Disabled):hover {
		--arrow-grad-start: #eaf6fd;
		--arrow-grad-end: #a7d9f5;
		--arrow-border: #3c7fb1;
		--arrow-inner-border: #fafdfe;
	}

	&.Disabled {
		--bg-main: #f0f0f0;
		--fg-main: #6d6d6d;

		--arrow-grad-start: #f4f4f4;
		--arrow-grad-end: #f4f4f4;
		--arrow-border: #adb2b5;
		--arrow-fg: #afafaf;
	}
}

.DialogDropDown_Arrow {
	background: linear-gradient(var(--arrow-grad-start), var(--arrow-grad-end));
	border: 1px solid var(--arrow-border);
	box-shadow: inset 0 0 0 1px var(--arrow-inner-border);

	text-align: center;
	position: unset;
	width: 19px;
	height: 22px;

	svg {
		background-color: var(--arrow-fg, var(--fg-main));
		mask: var(--icon-arrow-bottom);
		padding: 0;

		width: 7px;
		height: 4px;
	}

	polygon {
		display: none;
	}
}

.DialogDropDown_CurrentDisplay {
	padding: 3px 5px;

	flex-grow: 1;
}

.DialogFooter {
	padding-top: 8px;
}

.DialogHeader {
	:root[browsertype="DirectHWND"] & {
		display: none;
	}
}

.DialogInput {
	@extend %textfield-base;

	padding: 1px 3px;
}

.DialogInput_ClearAction {
	--icon-size: 12px;
	@include style.icon("delete", "svg");

	inset-inline-end: 6px;
}

.DialogInput_Wrapper {
	gap: 8px;
}

._DialogInputContainer {
	border-radius: 0;
}

.DialogRoundCheckboxField {
	margin: 0;

	width: unset;
	height: unset;
}

.DialogRoundCheckboxField_Container {
	gap: 7px;
	margin-block-end: 7px;
}

.DialogRoundCheckboxField_Control {
	@include controls.input-base("radio", ".Active", ".Disabled");

	background-color: transparent;

	width: var(--size);
	height: var(--size);
}

.DialogRoundCheckboxField_OuterCircle {
	display: none;
}

.DialogLabel,
.DialogToggle_Label {
	color: inherit;
	font: inherit;
	text-transform: unset;
}

.DialogToggle_Label {
	line-height: 1;
}

.FullModalOverlay {
	@include dialog.overlay;

	// Use this element for the animation
	opacity: 1;

	display: block;

	&[style="display: none;"] {
		opacity: 0;
		pointer-events: none;
	}

	& > dialog {
		border: none;
	}

	:where(.DialogBody) {
		padding: var(--library_spacing);
	}

	:where(.DialogButton) {
		@include library.button;

		box-shadow: none;
	}

	:where(.DialogContent) {
		@include library.section;

		color: var(--blue-text);
		font-size: var(--font-size);
		border-top: var(--library_border);
		padding: 0;
	}

	:where(.DialogContent_InnerWidth) {
		overflow: hidden;
	}

	:where(& .DialogHeader) {
		@include library.section-header;

		background-image: linear-gradient(
			0deg,
			var(--blue-dark),
			var(--blue-light)
		);
		font-size: var(--font-size);
		line-height: 2;
		margin: calc(var(--library_border-size) * -1);

		display: block;
	}

	.DialogTwoColLayout {
		gap: var(--library_spacing-x05);

		& > ._DialogLayout {
			min-width: unset;
		}
	}

	.ModalOverlayBackground {
		display: none;
	}

	.ModalPosition_Content {
		animation: dropfade var(--anim-time) ease-in;
	}
}

.ModalPosition.Destructive {
	.DialogButton {
		background:
			linear-gradient(
				0deg,
				hsl(from var(--library_button-bg-1) 0 s l) 9%,
				hsl(from var(--library_button-bg-2) 0 s l) 54%,
				hsl(from var(--library_button-bg-3) 0 s l)
			),
			var(--lighter-bg), var(--white-gradient);
		color: hsl(from var(--library_button-text) 0 s l);
		border-color: hsl(from var(--blue-border) 0 s l);
	}

	.DialogContent {
		background-color: hsl(from var(--library_section-bg) 0 s l);
		color: hsl(from var(--blue-text) 0 s l);
		border-color: hsl(from var(--library_border-color) 0 s l);
	}

	.DialogHeader {
		background-image: linear-gradient(
			0deg,
			hsl(from var(--blue-dark) 0 s l),
			hsl(from var(--blue-light) 0 s l)
		);
		color: hsl(from var(--blue-text) 0 s l);
		border-color: hsl(from var(--library_section-header-border-color) 0 s l);
	}
}

.ModalPosition_Content {
	color: inherit;
	font-size: inherit;
	font-weight: normal;
	box-shadow: none;

	.PopupFullWindow & > div {
		padding-top: var(--title-bar-height);
	}
}

.ModalPosition_Dismiss {
	@include style.icon("delete", "svg");

	inset-inline-end: 8px;
	inset-block-start: 8px;
}

.ModalPosition_TopBar {
	display: none;
}

// fix for game info dialog
.TitleBar {
	z-index: 99;
	height: var(--title-bar-height);

	:root[browsertype="DirectHWND"] & {
		display: none;
	}
}

